# sentry-kernel

./: .readthedocs.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Kconfig  LICENSE  README.md  REUSE.toml  conanfile.py  meson.build  meson.options  requirements.txt  rust-toolchain.toml  sonar-project.properties
autotest/: Kconfig  meson.build
autotest/include/: devices-dt.h.in  io.h  meson.build  shms-dt.h.in
autotest/include/drivers/: timer.h
autotest/include/testlib/: assert.h  core.h  log.h
autotest/src/: main.c  meson.build  printf.c  ssp.c  test_sleep.c  test_sleep.h
autotest/src/arch/: meson.build
autotest/src/drivers/: meson.build
autotest/src/tests/: meson.build  test_cycles.c  test_cycles.h  test_dma.c  test_dma.h  test_gpio.c  test_gpio.h  test_handle.c  test_handle.h  test_ipc.c  test_ipc.h  test_irq.c  test_irq.h  test_led.c  test_led.h  test_map.c  test_map.h  test_random.c  test_random.h  test_shm.c  test_shm.h  test_signal.c  test_signal.h  test_sleep.c  test_sleep.h  test_yield.c  test_yield.h
doc/: meson.build
doc/concepts/: conf.py  index.rst
doc/concepts/build_system/: dts.rst  index.rst  svd.rst  targets.rst
doc/concepts/concepts/: archi_req.rst  events.rst  index.rst  initial.rst  security.rst  uapi.rst
doc/concepts/proof/: basics.rst  eva.rst  index.rst  wp.rst
doc/concepts/sw_architecture/: asp.rst  bsp.rst  index.rst  schedulers.rst  syscalls.rst  task_layout.rst  user_devices.rst
doc/concepts/tests/: autotest.rst  index.rst  unittests.rst
doc/concepts/uapi/: index.rst  model.rst  syscalls.rst
doc/internals/: Doxyfile  conf.py  index.rst
doc/mans/: meson.build
doc/sphinx/: Doxyfile  conf.py  deps.rst  index.rst  syscalls.rst
doc/sphinx/concepts/: archi_req.rst  initial.rst  security.rst
doc/sphinx/sw_architecture/: asp.rst  bsp.rst  index.rst  syscalls.rst
dts/: meson.build  sentry.dtsi  sentry_nucleo_f401re.dts  sentry_nucleo_stm32l476rg.dts  sentry_nucleo_u5a5zj.dts  sentry_sample_stm32f4.dts  sentry_sample_stm32l4.dts  sentry_sample_stm32l476rg.dts  sentry_stm32f429i_disc1.dts
dts/examples/: nucleo_f401re.dts  nucleo_l476rg.dts  nucleo_l476rg_autotest.dts  nucleo_l476rg_debug.dts  nucleo_u5a5.dts  nucleo_u5a5_autotest.dts  nucleo_u5a5_nooutput.dts  nucleo_wb55_autotest.dts  stm32f429i_disc1.dts  stm32f429i_disc1_autotest.dts  stm32f429i_disc1_release.dts
idle/: meson.build
idle/src/: main.c  meson.build  ssp.c
idle/src/arch/: control.h
include/sentry/: bits.h  clk.h  device.h  dma.h  handle.h  io.h  ktypes.h  meson.build  mm.h  sched.h  signal.h  task.h  thread.h
include/sentry/arch/: meson.build
include/sentry/crypto/: crc32.h  pgc32.h
include/sentry/devices/: gpio.h  meson.build
include/sentry/drivers/: meson.build
include/sentry/managers/: clock.h  debug.h  device.h  io.h  memory.h  task.h
kernel/include/sentry/: bits.h  dma.h  handle.h  io.h  ipc.h  job.h  ktypes.h  meson.build  sched.h  signal.h  syscalls.h  thread.h
kernel/proof/: meson.build  svc_entrypoint.c
kernel/proof/proof_bsp/: meson.build
kernel/proof/proof_composition/: meson.build
kernel/proof/proof_entrypoint/: kernel_entrypoint.c  meson.build
kernel/proof/proof_handlers/: framac_tooling.h  meson.build
kernel/proof/proof_zlib/: kernel_zlib.c  meson.build
kernel/src/arch/: Kconfig  meson.build
kernel/src/drivers/: Kconfig  meson.build
kernel/src/managers/: Kconfig  meson.build
proof/: main.c  meson.build
proof/proof_bsp/: framac_tools.h  meson.build
proof/proof_bsp/proof_clk/: main.c  meson.build
proof/proof_bsp/proof_exti/: main.c  meson.build
proof/proof_bsp/proof_pwr/: main.c  meson.build
proof/proof_bsp/proof_rcc/: main.c  meson.build
proof/proof_bsp/proof_rng/: main.c  meson.build
schemas/task/: meson.build  metadata.schema.json  metadata.schema.json.cpp  sample.json  sample.toml  task_capabilities.json  task_metadata.json
src/: meson.build
src/arch/: Kconfig  meson.build
src/arch/asm-cortex-m/: Kconfig  cortex-m-idle.ld.in  cortex-m-sentry.ld.in  handler.c  meson.build  mpu.c  nvic.c  startup.S  systick.c  thread.c  vtor.c.in
src/arch/asm-generic/: platform.c  sync.c
src/core/: Kconfig  entrypoint.c  meson.build
src/core/sched/: delay.c  fifo.c  meson.build  rrmq.c  sched_fifo.c  sched_rrmq.c
src/core/zlib/: meson.build  string.c
src/crypto/: crc32.c  meson.build
src/drivers/: meson.build
src/drivers/clk/: meson.build  stm32-rcc-dt.c.in  stm32-rcc-dt.h.in  stm32-rcc.c.in  stm32-rcc.h.in  stm32f4-pwr.c  stm32f4-rcc.c  stm32f4-rcc.c.in  stm32f4-rcc.h.in  stm32f4xx-pwr.h  stm32f4xx-rcc.c  stm32l4-rcc.c.in  stm32l4-rcc.h.in  stm32u5-clk.c
src/drivers/exti/: meson.build  stm32-exti-dt.c.in  stm32-exti-dt.h.in  stm32-exti.c  stm32f4-exti.c
src/drivers/flash/: meson.build  stm32-flash-dt.c.in  stm32-flash-dt.h.in  stm32-flash.c  stm32-flash.c.in  stm32f4-flash.c.in  stm32u5-flash.c
src/drivers/gpio/: meson.build  stm32-gpio-dt.c.in  stm32-gpio-dt.h.in  stm32-gpio.c  stm32-iomux.c  stm32-pinctrl.c
src/drivers/lwuart/: stm32-lwuart.c
src/drivers/rng/: meson.build  stm32-rng-dt.c.in  stm32-rng-dt.h.in  stm32f4-rng.c  stm32f4xx-rng.c
src/drivers/syscfg/: meson.build  stm32-syscfg-dt.c.in  stm32-syscfg-dt.h.in  stm32f4-syscfg.c  stm32f4xx-syscfg.c
src/drivers/usart/: meson.build  (+3 more)
src/kernel/: entrypoint.c  kworker.c  meson.build  task.c
src/managers/: Kconfig  meson.build
src/memory/: meson.build  mm.c
src/security/: Kconfig  layout.c  meson.build  permissions.c
src/syscalls/: Cargo.toml  debug.rs  gate.rs  lib.rs  meson.build  mocks.rs  sysimpl.rs
tests/: meson.build
tests/test_managers/: meson.build
tests/test_utils/: meson.build
tools/genmetadata/: meson.build
uapi/: .gitignore  Cargo.toml  README.md  cbindgen.toml  cbindgen_uapi.toml  meson.build  rust-toolchain.toml.in  rustargs.in  task.Kconfig
uapi/src/: exchange.rs  ffi_c.rs  lib.rs  meson.build  mocks.rs  panic.rs  svc_exchange.rs  syscall.rs  systypes.rs  uapi.rs
uapi/uapi/: Cargo.toml  lib.rs  meson.build  svc_exchange.rs  syscall.rs  systypes.rs  uapi.rs
(+544 files in other folders)
