option('with_doc', type: 'boolean', value: false, description: 'trigger the sphinx documentation build')
option('with_tests', type: 'boolean', value: false, description: 'with unit tests')
option('with_proof', type: 'boolean', value: false, description: 'with frama-c proofs')
option('with_kernel', type: 'boolean', value: true, description: 'Sentry kernel is built')
option('with_uapi', type: 'boolean', value: true, description: 'Sentry UAPI library is built')
option('with_idle', type: 'boolean', value: true, description: 'Sentry Idle task is built')
