option('with_doc', type: 'boolean', value: false, description: 'trigger the sphinx documentation build')
option('with_tests', type: 'boolean', value: false, description: 'with unit tests')
option('with_proof', type: 'boolean', value: false, description: 'with frama-c proofs')
option('with_kernel', type: 'boolean', value: true, description: 'Sentry kernel is built')
option('with_uapi', type: 'boolean', value: true, description: 'Sentry UAPI library is built')
option('with_idle', type: 'boolean', value: true, description: 'Sentry Idle task is built')
option('with_tools', type: 'boolean', value: true, description: 'compile naitive tools')
option('config', type: 'string', description: 'Configuration file to use', yield: true)
option('dts', type: 'string', description: 'Top level DTS file', yield: true)
option('dts-include-dirs', type: 'array', value: ['dts'], yield: true,
       description: 'Directories to add to resolution path for dtsi inclusion')
